@@ -1,3 +1,8 @@
+2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* debbugs.el (debbugs-send-control-message): Add more control
+	messages.
+
 2011-07-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs.el (debbugs-emacs): Let-bind `debbugs-port' to "gnu.org".
